# dotfiles

./: .aliases  .bash_logging  .bash_profile  .bashrc  .emacs  .environment  .gitconfig-chromium  .xsessionrc  README.md  aliases.sh  environment.sh  fonts.conf  gitconfig  gitconfig-chromium  gitconfig-google  gitconfig-spuddybuddy  us-mfoltz
.fvwm/: config  config.1920  config.2560  config.3840
chromium/: .gdbinit
chromium/args/chromeos-debug/: args.gn
chromium/args/chromeos-release/: args.gn
chromium/args/chromiumos-msan/: args.gn
chromium/args/debug/: args.gn
chromium/args/lacros-release/: args.gn
chromium/args/release/: args.gn
emacs/: TODO.md  clean-buffers.el  emacs.el  mf-misc.el
gemini/prompts/: chromium.md  extend_histograms.md
gemini/skills/dangling-pointer-detector/: SKILL.md
gemini/skills/gerrit/: SKILL.md
gemini/skills/histogram-manager/: SKILL.md
gemini/skills/histogram-manager/scripts/: manage_histograms.py
hwdb/: 99-kinesis-advantage2-keyboard.hwdb
mac/: mfoltz.terminal
ssh/: config
